..F....... [ZBX-8221] corrected labels while copying items (Andrejs)
........S. [ZBX-8092] added disabled hosts, disabled items and enabled items of disabled hosts to the configuration cache for correct macro expansion in notifications (igors)

--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
A.F.I..PS. [ZBXNEXT-1782] added support of new trigger expression operators ">=", "<=", "<>", "and", "or" and "not"; removed existing "#", "|" and "&" (asaveljevs, Pavels)
...GI..PS. [ZBXNEXT-2203] added information on the reason items become not supported (Alexei, asaveljevs)
..F....... [ZBXNEXT-734] implemented support for URL as dynamic screen element and added macro support (Ivo)
...GI..PS. [ZBXNEXT-497] added support for patterns in "Include" configuration directive (asaveljevs)
...G...... [ZBXNEXT-1506] added support for vfs.dev.read[] and vfs.dev.write[] on AIX; thanks to Jairo Lopez and Boris Manojlovic for patches (asaveljevs)
..F....... [ZBX-5430] implemented ISO 8601 standard date format "YYYY-MM-DD hh:mm:ss" as default (Ivo)
A......... [ZBX-7981] deprecated "exists" API methods (Ivo)
A.F....... [ZBX-7949] improved multibyte string support (Ivo)
..F....... [ZBXNEXT-2270] changed "Status" dropdown in host and host prototype forms to "Enabled" checkbox (Krists)
..F....... [ZBX-7941] changed page footer to not show debug in fullscreen mode (Krists)
A.F.I...S. [ZBXNEXT-1343] removed support of old style node-based distributed monitoring (Eduard, Sasha)
........S. [ZBXNEXT-2256] added support of host level macros like {HOST.*} along with user macros in LLD filter regexps (Sasha)
..F....... [ZBX-7979] added button "Clear history and trends" to scenarios form (Krists)
..F....... [ZBXNEXT-2065] added a filter option to hide recently resolved triggers in Monitoring -> Triggers (Oleg)
..F....... [ZBXNEXT-949] improved filters by adding different titles for open and collapsed states (Krists)